# fourier_propagation

./: .gitignore  README.md  pyproject.toml
examples/: 01_double_slit.py  02_circular_fresnel.py  03_gaussian_focus.py  1d_01_double_slit_fraunhofer.py  1d_02_single_slit_fresnel.py  1d_03_gaussian_focus.py  1d_04_xz_rect_aperture.py  1d_05_in_out_overlay.py  1d_06_gaussian_lens_midpoint.py  1d_a_gauss_lens_in_out_overlay.py  1d_b_triple_gauss_xz.py  1d_c_triple_gauss_in_out_overlay.py  1d_d_rect_2f2f_xz.py  1d_e_rect_2f2f_mid_out_overlay.py  1d_f_rect_2f2f_xz_wideAperture.py  1d_g_rect_2f2f_in_out_overlay.py  runner_1d.py
notebooks/: scratch.ipynb
src/fourier_propagation/: __init__.py  apertures.py  apertures1d.py  fields.py  fields1d.py  lenses.py  plotting.py  plotting1d.py  propagation.py  propagation1d.py  sampling.py  sampling1d.py
tests/: test_basic.py
