
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fourier-propagation"
version = "0.1.0"
description = "FFT-based scalar Fourier optics: Fresnel, Fraunhofer, Angular Spectrum, lenses, apertures."
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.22",
  "scipy>=1.10",
  "matplotlib>=3.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
